--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>loops</title>
+    </head>
+    <body>
+        <h1>use of loops</h1>
+        <script>
+            let count = 0;
+while (count < 10) {
+    let randomNumber = Math.floor(Math.random() * 100);
+    document.write(randomNumber + "<br>");
+    count++;
+}
 
+        </script>
+    </body>
+</html>
